# Software_Architecture_4_Robotics_Assignment

./: README.md  package.xml  setup.py
launch/: bringup_launch.py  robot_launch.py
maps/: emaro_keepout_mask.pgm  emaro_keepout_mask.yaml  emaro_keepout_mask2.pgm  emaro_keepout_mask2.yaml  emaro_map.pgm  emaro_map.yaml  keepout_mask.pgm  keepout_mask.yaml  keepout_mask1.pgm  keepout_mask1.yaml  keepout_mask2.pgm  keepout_mask2.yaml  keepout_mask3.pgm  keepout_mask3.yaml  map.yaml  map2.pgm  map2.yaml
params/: emaro_keepout_params.yaml  emaro_keepout_params_2.yaml  emaro_nav2_params.yaml  keepout_params_1.yaml  keepout_params_2.yaml  keepout_params_3.yaml  nav2_params.yaml  nav2_params_1.yaml
sofar_assignment/: nav_to_pose.py
worlds/: emaro_lab.wbt
