<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sofar_assignment</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="davide.parisi1084@gmail.com">davide</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  
   <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
